[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/bird.gd" type="Script" id=1]
[ext_resource path="res://gfx/bird/frame-8.png" type="Texture" id=2]
[ext_resource path="res://gfx/bird/frame-6.png" type="Texture" id=3]
[ext_resource path="res://gfx/bird/frame-2.png" type="Texture" id=4]
[ext_resource path="res://gfx/bird/frame-1.png" type="Texture" id=5]
[ext_resource path="res://gfx/bird/frame-7.png" type="Texture" id=6]
[ext_resource path="res://gfx/bird/frame-5.png" type="Texture" id=7]
[ext_resource path="res://gfx/bird/frame-3.png" type="Texture" id=8]
[ext_resource path="res://gfx/bird/frame-4.png" type="Texture" id=9]
[ext_resource path="res://gfx/bird/particle.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.5, 21 )

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.474074, 1 )
colors = PoolColorArray( 1, 0.997559, 0.960938, 1, 1, 0.105469, 0.105469, 1, 0.207843, 0.0627451, 0.0627451, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.281818 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 10.0
scale = 1.5
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[node name="Area2D" type="Area2D"]
position = Vector2( -2.26413, 8.30177 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, -8 )
shape = SubResource( 2 )

[node name="DeathParticles" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 2.26413, -9.05648 )
emitting = false
amount = 20
lifetime = 1.5
one_shot = true
explosiveness = 0.99
randomness = 0.2
process_material = SubResource( 8 )
texture = ExtResource( 10 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
